--- a/css/myStyle.css
+++ b/css/myStyle.css
@@ -29,7 +29,7 @@ th{
     color: white;
 }
 
-.table {
+/*.table {
     border-spacing: 0;
     border-collapse: collapse;
     overflow: hidden;
@@ -62,5 +62,5 @@ td:hover::after {
     top: -5000px;
     width: 100%;
     z-index: -1;        
-}
+}*/
 
