--- a/css/myStyle.css
+++ b/css/myStyle.css
@@ -36,37 +36,36 @@ th{
 }
 
 /*.table {
-    border-spacing: 0;
-    border-collapse: collapse;
-    overflow: hidden;
-    z-index: 1;
+    border-spacing: 0 !important;
+    border-collapse: collapse !important;
+    overflow: hidden !important;
+    z-index: 1 !important;
 }
 
 td, th {
-    cursor: pointer;
-    padding: 10px;
-    position: relative;
+    cursor: pointer !important;
+    padding: 10px !important;
+    position: relative !important;
 }
 
 td:hover::before { 
-    background-color: #ffa;
-    content: '\00a0';  
-    height: 100%;
-    left: -5000px;
-    position: absolute;  
-    top: 0;
-    width: 10000px;   
-    z-index: -1;        
+    background-color: #ffa !important;
+    content: '\00a0' !important;
+    height: 100% !important;
+    left: -5000px !important;
+    position: absolute !important;
+    top: 0 !important;
+    width: 10000px !important;
+    z-index: -1 !important;
 }
 
 td:hover::after { 
-    background-color: #ffa;
-    content: '\00a0';  
-    height: 10000px;    
-    left: 0;
-    position: absolute;  
-    top: -5000px;
-    width: 100%;
-    z-index: -1;        
+    background-color: #ffa !important;
+    content: '\00a0' !important;
+    height: 10000px !important;
+    left: 0 !important;
+    position: absolute !important;
+    top: -5000px !important;
+    width: 100% !important;
+    z-index: -1 !important;
 }*/
-
