--- a/css/myStyle.css
+++ b/css/myStyle.css
@@ -34,37 +34,72 @@ th{
     color: white;
 }
 
-/*.table {
-    border-spacing: 0 !important;
-    border-collapse: collapse !important;
-    overflow: hidden !important;
-    z-index: 1 !important;
+.nav {
+    padding-left: 0;
+    margin-bottom: 0;
+    list-style: none;
+    color: white;
+    font-weight: bold;
 }
-
-td, th {
-    cursor: pointer !important;
-    padding: 10px !important;
-    position: relative !important;
+.nav > li {
+    position: relative;
+    display: block;
+    color: white;
+    font-weight: bold;
 }
-
-td:hover::before { 
-    background-color: #ffa !important;
-    content: '\00a0' !important;
-    height: 100% !important;
-    left: -5000px !important;
-    position: absolute !important;
-    top: 0 !important;
-    width: 10000px !important;
-    z-index: -1 !important;
+.nav > li > a {
+    position: relative;
+    display: block;
+    padding: 10px 15px;
+    color: white;
+    font-weight: bold;
+    background-color: #3498db;
+    border: 3px;
 }
-
-td:hover::after { 
-    background-color: #ffa !important;
-    content: '\00a0' !important;
-    height: 10000px !important;
-    left: 0 !important;
-    position: absolute !important;
-    top: -5000px !important;
-    width: 100% !important;
-    z-index: -1 !important;
-}*/
+.nav > li > a:hover, .nav > li > a:focus {
+    text-decoration: none;
+    background-color: #3cb0fd;
+    color: white;
+    font-weight: bold;
+}
+.nav-tabs {
+    border-bottom: 3px solid #ddd;
+    color: white;
+    font-weight: bold;
+}
+.nav-tabs > li {
+    float: left;
+    margin-bottom: -3px;
+}
+.nav-tabs > li > a {
+    margin-right: 2px;
+    line-height: 1.42857143;
+    border: 1px solid transparent;
+    border-radius: 5px 5px 0 0;
+}
+.nav-tabs > li > a:hover {
+    border-color: #eee #eee #ddd;
+    color: white;
+    font-weight: bold;
+}
+.nav-tabs > li.active > a {
+    color: black;
+    font-weight: bold;
+    cursor: default;
+    border: 3px solid #ddd;
+    border-bottom-color: transparent;
+}
+.nav-tabs > li.active > a:hover {
+    color: black;
+    font-weight: bold;
+    cursor: default;
+    border: 3px solid #ddd;
+    border-bottom-color: transparent;
+}
+.nav-tabs > li.active > a:focus {
+    color: black;
+    font-weight: bold;
+    cursor: default;
+    border: 3px solid #ddd;
+    border-bottom-color: transparent;
+}
