--- a/css/myStyle.css
+++ b/css/myStyle.css
@@ -114,7 +114,8 @@ ul > li > a {
 }
 
 .cell-input {
-    border-radius: 4px !important; 
+    border-radius: 4px !important;
+    cursor: auto; 
 }
 
 .glyphicon-remove {
