--- a/css/myStyle.css
+++ b/css/myStyle.css
@@ -131,3 +131,84 @@ ul > li > a {
   pointer-events: auto;
   cursor: pointer;
 }
+
+/* The Modal (background) */
+.modal-me {
+    display: block; /* Hidden by default */
+    position: fixed;
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content/Box */
+.modal-content-me {
+    transition: transform 1s;
+    background-color: #fefefe;
+    position: fixed;
+    border-radius: 25px;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 800px; /* Could be more or less, depending on screen size */
+    box-shadow: 10px 10px 5px rgba(0,0,0,0.5);
+}
+
+/* The Close Button */
+.close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.boxDown {
+  animation-name: movingBoxDown;
+  animation-duration: 1s;
+    animation-fill-mode: forwards;
+}
+
+@keyframes movingBoxDown {
+  0% {
+    left: 50%;
+    top: 0; 
+    transform: translate(-50%, 0);
+  }
+
+  100% {
+    left: 50%;
+    top: 50%; 
+    transform: translate(-50%, -50%);
+  }
+}
+
+.boxUp {
+  animation-name: movingBoxUp;
+  animation-duration: 1s;
+    animation-fill-mode: forwards;
+}
+
+@keyframes movingBoxUp {
+  0% {
+    left: 50%;
+    top: 50%; 
+    transform: translate(-50%, -50%);
+  }
+
+  100% {
+    left: 50%;
+    top: 0; 
+    transform: translate(-50%, 0);
+  }
+}
