--- a/css/myStyle.css
+++ b/css/myStyle.css
@@ -141,9 +141,8 @@ ul > li > a {
     top: 0;
     width: 100%; /* Full width */
     height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+    overflow: none; /* Enable scroll if needed */
+
 }
 
 /* Modal Content/Box */
@@ -154,7 +153,7 @@ ul > li > a {
     border-radius: 25px;
     padding: 20px;
     border: 1px solid #888;
-    width: 800px; /* Could be more or less, depending on screen size */
+    
     box-shadow: 10px 10px 5px rgba(0,0,0,0.5);
 }
 
@@ -187,6 +186,7 @@ ul > li > a {
   }
 
   100% {
+    width: 850px;
     left: 50%;
     top: 50%; 
     transform: translate(-50%, -50%);
@@ -201,14 +201,159 @@ ul > li > a {
 
 @keyframes movingBoxUp {
   0% {
+    width: 850px;
     left: 50%;
     top: 50%; 
     transform: translate(-50%, -50%);
   }
 
   100% {
+    border: none;
+    box-shadow: none;
+    width: 100%;
+    height: auto;
+    padding-top: 20px;
+    border-radius: 0;
     left: 50%;
     top: 0; 
     transform: translate(-50%, 0);
+    background-color: #fefefe;
+  }
+}
+
+.veilDown {
+  animation-name: movingVeilDown;
+  animation-duration: 1s;
+    animation-fill-mode: forwards;
+}
+
+@keyframes movingVeilDown {
+  0% {
+    z-index: -1;
+    background-color: #fefefe;
+  }
+
+  100% {
+    z-index: -1;
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  }
+}
+
+
+.veilUp {
+  animation-name: movingVeilUp;
+  animation-duration: 1s;
+    animation-fill-mode: forwards;
+}
+
+@keyframes movingVeilUp {
+  0% {
+    z-index: 1;
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  }
+
+  100% {
+      z-index: 1;
+    background-color: #fefefe;
+  }
+}
+
+
+
+.container-fluid {
+    padding: 20px;
+    overflow-y: hidden;
+}
+
+
+
+.scrollThis {
+    overflow-y: auto !important;
+    height: auto;
+}
+
+.boxHide {
+  animation-name: movingBoxHide;
+  animation-duration: 1s;
+    animation-fill-mode: forwards;
+}
+
+@keyframes movingBoxHide {
+  0% { 
+    transform: translate(0, 0);
+  }
+
+  100% {
+    transform: translate(0, -550px);
+  }
+}
+
+.boxShow {
+  animation-name: movingBoxShow;
+  animation-duration: 1s;
+    animation-fill-mode: forwards;
+}
+
+@keyframes movingBoxShow {
+  0% { 
+    transform: translate(0, -550px);
+  }
+
+  100% {
+    transform: translate(0, 0px);
+  }
+}
+
+#modalMe2 {
+    overflow: hidden;
+    position: fixed;
+    top: 0;
+    width: 100%;
+}
+
+#results {
+    overflow: scroll;
+    position: fixed;
+    top: 600px;
+    width: 100%;
+    bottom: 0px;
+}
+
+.tableHide {
+  animation-name: movingTableHide;
+  animation-duration: 1s;
+    animation-fill-mode: forwards;
+}
+
+@keyframes movingTableHide {
+  0% { 
+    bottom: 0px;
+    transform: translate(0, 0);
+  }
+
+  100% {
+    bottom: -550px;
+    transform: translate(0, -550px);
+  }
+
+}
+
+.tableShow {
+  animation-name: movingTableShow;
+  animation-duration: 1s;
+    animation-fill-mode: forwards;
+}
+
+@keyframes movingTableShow {
+  0% { 
+      bottom: -550px;
+    transform: translate(0, -550px);
+  }
+
+  100% {
+      bottom: 0px;
+    transform: translate(0, 0px);
   }
 }
